--- a/src/postlist/editor.scss
+++ b/src/postlist/editor.scss
@@ -1,5 +1,11 @@
 .editor-block-list__block[data-type^="genero/postlist"] {
   .wp-block-genero-postlist {
+    &__archivelink {
+      &[data-is-placeholder-visible=true] {
+        width: 170px;
+      }
+    }
+
     a {
       // Prevent click
       pointer-events: none;
